# oversight

./: .gitignore  Cargo.toml  Makefile  README.md  setup.sh  uninstall.sh
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/cli/: integrate.rs  kb.rs  loop_cmd.rs  mod.rs
src/healing_loop/: daemon.rs  dedupe.rs  discovery.rs  merge.rs  mod.rs  patterns.rs  policy.rs  runner.rs  scrub.rs  transcript.rs
src/integrate/: fs.rs  manager.rs  markers.rs  mod.rs  render.rs  targets.rs
src/kb/: frontmatter.rs  index.rs  mod.rs  search.rs  service.rs  slug.rs  store.rs  types.rs
src/llm/: client.rs  extractor.rs  mod.rs  synthesizer.rs
src/source/: mod.rs  types.rs
src/source/providers/: claude_code.rs  codex.rs  crush.rs  gemini.rs  mod.rs  opencode.rs
tests/: cli_integration.rs  integrate_cli.rs  integrate_manager.rs  integrate_markers.rs  kb_crud.rs  kb_init.rs  kb_search.rs  loop_pipeline.rs  regime_policy.rs
tests/e2e/: ci.sh
