[package]
name = "oversight"
version = "0.1.0"
edition = "2021"
description = "A knowledge base and healing loop for AI coding agents"
license = "Apache-2.0"
repository = "https://github.com/twin-drill/oversight"
homepage = "https://oversight.twindrill.dev"
readme = "README.md"
keywords = ["ai", "agents", "knowledge-base", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "tests/",
    ".github/",
    "Makefile",
    "setup.sh",
    "uninstall.sh",
    "IDEA.md",
]

[[bin]]
name = "oversight"
path = "src/main.rs"

[lib]
name = "oversight"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
thiserror = "2"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
mockito = "1"
